2017-12-01  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-895

	* src/telsem.h:

	Add <array> include to fix compilation with clang.

	Add missing throw before std::runtime_error in several places.

2017-11-27 Simon Pfreundschuh <simon.pfreundschuh@chalmers.se>

	* arts-2-3-894

	* src/telsem.[cc, h]: (TelsemAtlas)

	Made TelsemAtlas a class and added methods to perform
	coordinate lookup as well as angular and frequency interpolation.

	* src/m_telsem.cc (telsemStandalone, telsemAtlasLoopkup):

	Added WSMs to evaluate Telsem emissivity model and lookup SSMI
	emissivities from the atlas.

	* src/methods.cc:

	Added entries for new WSMs.

	Added ArrayOfTelsemAtlas to supergeneric classes of extract method.

	* src/xml_io_compound_types.cc

	Adapted io routines for telsem atlases.

	* controlfile/artscomponents/telsem/TestTelsem.arts

	Added a simple test for lookup and interpolation.

2017-11-27  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-893

	* src/m_transmitter.cc (iyTransmissionStandard2): A start ...

	* src/m_rte.cc (iyEmissionStandard2):
	* src/m_fos.cc (iyHybrid): Just changes in comments.

2017-11-24 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-892

	* src/m_optproperties.cc, methods.cc (scat_dataReduceT):
	Added. Work in progress.

	(scat_dataCalc):
	Do check for single-entry, but identical f-grids directly here.

	* src/check_input.[cc,h] (chk_interpolation_grids):
	Allow order=0. Make work for case when old_grod.nelem==1 and order=0.
	Moved check for single-entry, but identical grids grids out again.

	* src/interpolation_poly.cc (interpweights,interp):
	Fixed itw dimension documentation.

	* src/m_psd.cc (psdW16), doc/uguide/interpolation.tex:
	Typos fixed.

2017-11-23  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-891

	* controlfiles/artscomponents/hybridscat/TestHybrid.arts: Updated.

	* src/m_fos.cc (iyHybrid2): Removed.

	* src/m_fos.cc (iyHybrid): Seems to work!
